--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:docker": "docker compose pull && docker compose up --remove-orphans",
     "dev": "subql codegen && subql build && docker compose pull && docker compose up --remove-orphans",
     "prepack": "rm -rf dist && npm run build",
-    "test": "subql build && subql-node-ethereum test"
+    "test": "subql build && subql-node-ethereum test",
+    "publish": "set SUBQL_ACCESS_TOKEN=MTk4OTY5NDI=dpREhg1Bj5AcY7fR5TCZ && subql publish"
   },
   "homepage": "https://github.com/subquery/ethereum-subql-starter",
   "repository": "github:subquery/ethereum-subql-starter",
@@ -21,6 +22,8 @@
   "author": "DeSchool",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.515.0",
+    "@aws-sdk/credential-providers": "^3.515.0",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@subql/common": "latest",
@@ -28,6 +31,7 @@
     "@subql/types-ethereum": "latest",
     "@subql/validator": "latest",
     "assert": "^2.0.0",
+    "axios": "^1.6.7",
     "pino": "^8.19.0",
     "tslib": "^2.6.2"
   },
