--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@subql/types-ethereum": "latest",
     "@subql/validator": "latest",
     "assert": "^2.0.0",
-    "axios": "^1.6.7",
+    "got": "^14.2.0",
     "pino": "^8.19.0",
     "tslib": "^2.6.2"
   },
