--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@subql/validator": "latest",
     "assert": "^2.0.0",
     "got": "^14.2.0",
+    "node-fetch": "^3.3.2",
     "pino": "^8.19.0",
     "tslib": "^2.6.2"
   },
