--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "importHelpers": true,
     "resolveJsonModule": true,
-    "module": "CommonJS",
+    "module": "NodeNext",
     "outDir": "dist",
     "rootDir": "src",
     "target": "es2017",
