--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@subql/types-core": "^0.5.0",
     "@subql/types-ethereum": "latest",
     "@subql/validator": "latest",
+    "abab": "^2.0.6",
     "assert": "^2.0.0",
     "node-fetch": "2.6.7",
     "pino": "^8.19.0",
